# wiringPi

./: .gitignore  Android.bp  Android.mk  Makefile.am  People  VERSION  build  configure.ac  libwiringpi2.pc.in  newVersion  update  version.h
debian/: changelog  control  copyright  libwiringpi-dev.dirs  libwiringpi-dev.install  libwiringpi2.install  libwiringpi2.postinst  odroid-wiringpi.install  odroid-wiringpi.postinst  odroid-wiringpi.postrm  rules  wiringpi-examples.install
debian-template/wiringPi/DEBIAN/: control
devLib/: Makefile  Makefile.am  piFace.c
etc/: odroid-allowuser.sh  odroid-wpi-pwm.sh
etc/sudoers.d/: odroid-wpi-sudoers
examples/: Makefile.am  configure.ac  i2c-lcd.c
examples/Gertboard/: Makefile.am
examples/PiFace/: Makefile.am
examples/PiGlow/: Makefile.am  piGlow0
examples/q2w/: Makefile.am
examples/scrollPhat/: Makefile.am
gpio/: Makefile  Makefile.am  gpio.c  gpio_odroid.c  readall.c  readall_odroid.c
jni/: Android.mk
pins/: Makefile  Makefile.am  odroid_c1.tex  odroid_c2.tex  odroid_c4.tex  odroid_n1.tex  odroid_n2.tex  odroid_xu3.tex
udev/rules.d/: 99-odroid-wiringpi-aml.rules  99-odroid-wiringpi-exynos.rules  99-odroid-wiringpi-meson.rules  99-odroid-wiringpi-pwm.rules  99-odroid-wiringpi-rockchip.rules
wiringPi/: Makefile  Makefile.am  drcNet.c  mcp3422.c  odroid_template.c  odroid_template.h  odroidc1.c  odroidc1.h  odroidc2.c  odroidc2.h  odroidc4.c  odroidc4.h  odroidhc4.c  odroidm1.c  odroidm1.h  odroidm1s.c  odroidn1.c  odroidn1.h  odroidn2.c  odroidn2.h  odroidxu3.c  odroidxu3.h  pcf8591.c  pseudoPins.c  wiringOdroid.c  wiringOdroid.h  wiringOdroidI2C.c  wiringOdroidSPI.c  wiringPi.c  wiringPi.h  wiringPiI2C.c  wiringPiI2C.h  wiringPiSPI.c  wiringPiSPI.h  wpiExtensions.c
wiringPiD/: Makefile.am  drcNetCmd.h
