ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA = libwiringpi2.pc

SUBDIRS = wiringPi wiringPiD devLib gpio

wiringpi_includedir = ${includedir}/wiringpi2
wiringpi_include_HEADERS = \
	devLib/ds1302.h \
	devLib/font.h \
	devLib/gertboard.h \
	devLib/lcd.h \
	devLib/lcd128x64.h \
	devLib/maxdetect.h \
	devLib/piFace.h \
	devLib/piGlow.h \
	devLib/piNes.h \
	devLib/scrollPhat.h \
	devLib/scrollPhatFont.h \
	wiringPi/drcSerial.h \
	wiringPi/max31855.h \
	wiringPi/mcp23017.h \
	wiringPi/pcf8591.h \
	wiringPi/sn3218.h \
	wiringPi/softPwm.h \
	wiringPi/softTone.h \
	wiringPi/wiringPi.h \
	wiringPi/wiringSerial.h
