ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA = libwiringpi2.pc

SUBDIRS = wiringPi wiringPiD devLib gpio

wiringpi_includedir = ${includedir}/wiringpi2
wiringpi_include_HEADERS = \
	devLib/ds1302.h \
	devLib/font.h \
	devLib/gertboard.h \
	devLib/lcd.h \
	devLib/lcd128x64.h \
	devLib/maxdetect.h \
	devLib/piFace.h \
	devLib/piGlow.h \
	devLib/piNes.h \
	devLib/scrollPhat.h \
	devLib/scrollPhatFont.h \
	wiringPi/ads1115.h \
	wiringPi/bmp180.h \
	wiringPi/drcNet.h \
	wiringPi/drcSerial.h \
	wiringPi/ds18b20.h \
	wiringPi/htu21d.h \
	wiringPi/max31855.h \
	wiringPi/max5322.h \
	wiringPi/mcp23008.h \
	wiringPi/mcp23016.h \
	wiringPi/mcp23017.h \
	wiringPi/mcp23s08.h \
	wiringPi/mcp23s17.h \
	wiringPi/mcp23x08.h \
	wiringPi/mcp23x0817.h \
	wiringPi/mcp3002.h \
	wiringPi/mcp3004.h \
	wiringPi/mcp3422.h \
	wiringPi/mcp4802.h \
	wiringPi/pcf8574.h \
	wiringPi/pcf8591.h \
	wiringPi/pseudoPins.h \
	wiringPi/rht03.h \
	wiringPi/sn3218.h \
	wiringPi/softPwm.h \
	wiringPi/softServo.h \
	wiringPi/softTone.h \
	wiringPi/wiringPi.h \
	wiringPi/wiringPiI2C.h \
	wiringPi/wiringPiSPI.h \
	wiringPi/wiringSerial.h \
	wiringPi/wiringShift.h \
	wiringPi/wpiExtensions.h
